It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Mon, Feb 23, 2008
---------------------------------------------------------------------
- Implemented adding leads from within campaign landing page.

Sun, Feb 22, 2008
---------------------------------------------------------------------
- Adding parent object support for inline forms.

Fri, Feb 20, 2008
---------------------------------------------------------------------
- Major refactoring to support inline form embedding throughout the system.

Thu, Feb 19, 2008
---------------------------------------------------------------------
- Simplified storing expand/collapse state for form sections.
- Started refactoring to support inline form embedding.

Wed, Feb 18, 2008
---------------------------------------------------------------------
- Converted [Create...] forms to remote to be able to reuse them inline.
- Refactored javascript and stylesheet includes for popup calendar control.
- Consolidated scattered inline stylesheets into single shared partial.

Tue, Feb 17, 2008
---------------------------------------------------------------------
- Refactored styles, added [Campaign] to [Lead] and [Opportunity] landing pages.
- Added [Contacts] and [Opportunities] to [Account] landing page.
- Added [Accounts] and [Opportunities] to [Contact] landing page.
- Added [Accounts] and [Campaigns] to [Opportunity] landing page.
- Refactored JavaScript code to automatically set focus on first form field.

Mon, Feb 16, 2008
---------------------------------------------------------------------
- Save shown/hidden state of [post a note] form for all commentable models.
- Updated controller and view specs to support commentables.
- Added comments fixture to generate sample comments for all the core models.

Sun, Feb 15, 2008
---------------------------------------------------------------------