@@ -25,15 +25,6 @@ command:
 This will download the latest code snapshot and unpack it on your local machine.
 
 
-=== Gem Dependencies
-
-Fat Free CRM requires three external gems: +ruby+-+openid+, +haml+, and +faker+.
-Ruby-openid library is needed for OpenID authentcation, HAML is used as
-primary templating engine, and Faker helps to generate demo data that you can
-optionally load. All the required games have been packaged in +vendor+/+gems+
-subidirectory, so no additional setup is required.
-
-
 === Setting Up The Database
 
 Fat Free CRM supports MySQL and SQLite databases. The source code comes with
@@ -82,14 +73,17 @@ to http://localhost:3000
    $ ./script/server
 
 
-=== Writing Plugins
+=== For Developers
 
-Fat Free CRM can be customized and extended by the use of plugins. Please
-see http://github.com/michaeldv/crm_sample_plugin/tree/master and
-http://github.com/michaeldv/crm_web_to_lead/tree/master for sample plugins.
+Fat Free CRM can be customized by trapping callback hooks and extended by adding
+plugins. Please see http://github.com/michaeldv/crm_sample_plugin/tree/master and
+http://github.com/michaeldv/crm_web_to_lead/tree/master for sample source code
+demonstrating the concepts.
 
 
 === License
+
+Copyright (c) 2008-2009 by Michael Dvorkin. All rights reserved.
 
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU Affero General Public License as published by
@@ -101,8 +95,3 @@ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 FOR A PARTICULAR PURPOSE.
 
 See LICENSE file for more details.
-
-
-=== Copyright
-Copyright (c) 2008-2009 by Michael Dvorkin. All rights reserved.
-
