@@ -4,6 +4,10 @@ if @opportunity.valid?
   page << "Effect.toggle('#{@context}', 'blind', { duration: 0.1 });"
   page.insert_html :top, :opportunities, :partial => "opportunity", :collection => [ @opportunity ]
   page[dom_id(@opportunity)].visual_effect :highlight, :duration => 1.5
+  if request.referer =~ /opportunities$/
+    page[:sidebar].replace_html :partial => "sidebar_index"
+    page[:filters].visual_effect :shake, :duration => 0.4, :distance => 3
+  end
 else
   page[@context].replace_html :partial => "create"
   page[@context].visual_effect :shake, :duration => 0.25, :distance => 6
