@@ -46,7 +46,7 @@ module FatFreeCRM
     def find_parent_object_for(model, context)
       return if context !~ /\d+$/
       parent, id = context.split("_")[-2, 2]
-      model.attributes = { parent => parent.capitalize.constantize.find(id) }
+      model.attributes = { parent => instance_variable_set("@#{parent}", parent.capitalize.constantize.find(id)) }
     end
 
   end
