@@ -6,7 +6,8 @@ then you win. –- Mahatma Gandhi
 
 Mon, Feb 23, 2008
 ---------------------------------------------------------------------
-- Implemented adding leads from within campaign landing page.
+- Implemented adding leads from [Campaign] landing page.
+- Implemented adding opportunities from [Account] landing page.
 
 Sun, Feb 22, 2008
 ---------------------------------------------------------------------
